# taxidriver

./: .gitignore  README.md  base.py  init.sh  justfile  main.py  poetry.toml  pyproject.toml  qlearning.py
docs/: 00_introduction.md  01_epsilon_decrease.md  02_epsilon_minimum.md
qlearning/: cliffwalking.ipynb  frozenlake.ipynb  taxiv3.ipynb
src/: config.py  gui.py  main.py  trainer.py
src/agents/: taxi_v3.py
src/cli/: prompts.py
src/config/: base.py  hyperparameters.yml
src/debug/: run_dev.py
src/settings/: logger.py
src/ui/: gui_app.py  layout.py  window.py
