[tool.poetry]
package-mode = false
name = "bootstrap"

[tool.poetry.dependencies]
python = "^3.11"
poethepoet = "^0.25.0"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
rich = "^13.7.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
q = "python3 -m qlearning"